[gd_scene load_steps=6 format=2]

[ext_resource path="res://addons/scaffold/src/gui/screens/LevelSelectScreen.gd" type="Script" id=1]
[ext_resource path="res://addons/scaffold/src/gui/FullScreenPanel.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/scaffold/src/gui/NavBar.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/scaffold/src/gui/CenteredPanel.tscn" type="PackedScene" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.152941, 0.192157, 0.286275, 1 )
shadow_size = 8
shadow_offset = Vector2( -4, 4 )

[node name="LevelSelectScreen" type="Node2D"]
script = ExtResource( 1 )

[node name="FullScreenPanel" parent="." instance=ExtResource( 2 )]
margin_right = 960.0
margin_bottom = 1156.0
custom_styles/panel = SubResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="FullScreenPanel"]
margin_right = 960.0
margin_bottom = 1156.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NavBar" parent="FullScreenPanel/VBoxContainer" instance=ExtResource( 3 )]
margin_right = 960.0
margin_bottom = 192.0
text = "Select level"

[node name="CenteredPanel" parent="FullScreenPanel/VBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 196.0
margin_right = 960.0
margin_bottom = 1156.0
rect_min_size = Vector2( 960, 960 )
stretches_horizontally = false
stretches_vertically = true

[node name="ScrollContainer" type="ScrollContainer" parent="FullScreenPanel/VBoxContainer/CenteredPanel"]
margin_right = 960.0
margin_bottom = 960.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CenterContainer" type="CenterContainer" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer"]
margin_right = 960.0
margin_bottom = 960.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer"]
margin_left = 320.0
margin_top = 476.0
margin_right = 640.0
margin_bottom = 484.0
rect_min_size = Vector2( 320, 0 )

[node name="Spacer1" type="Control" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer"]
margin_left = 160.0
margin_right = 160.0
size_flags_horizontal = 4
size_flags_vertical = 3

[node name="LevelSelectItems" type="VBoxContainer" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer"]
margin_top = 4.0
margin_right = 320.0
margin_bottom = 4.0
rect_min_size = Vector2( 320, 0 )
size_flags_horizontal = 3
size_flags_vertical = 4
custom_constants/separation = 16

[node name="Spacer2" type="Control" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer"]
margin_left = 160.0
margin_top = 8.0
margin_right = 160.0
margin_bottom = 8.0
size_flags_horizontal = 4
size_flags_vertical = 3
